<resources>
    <string name="app_name">Appshortcuts_project</string>
    <string name="action_settings">Settings</string>

    <string name="shortcuts_name1">Android </string>
    <string name="shortcuts_name1_long">Android </string>
    <string name="shortcuts_disabled_message1">Erreur Activity 1</string>
    <string name="shortcuts_name2">Angular 2</string>
    <string name="shortcuts_name2_long">Angular 2</string>
    <string name="shortcuts_disabled_message2">Erreur Activity 2</string>
    <string name="shortcuts_name3">Android wear </string>
    <string name="shortcuts_name3_long">Android wear</string>
    <string name="shortcuts_disabled_message3">Erreur Activity 3</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
